<resources>
    <string name="app_name">CatsaShop</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_clear">Clear</string>
    <string name="action_circle">Draw Circle</string>
    <string name="action_overlay">Draw Overlay</string>
    <string name="action_polygon">Draw Polygon</string>
    <string name="action_traffic">Toggle Traffic</string>
    <string name="action_cycle_map_type">Cycle Map Type</string>

    <string name="dialog_play_services_unavailable">Google Play Services are unavailable.</string>
    <string name="dialog_download_play_services">Download Play Services</string>
    <string name="dialog_close_program">Close Program</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="them_vao_gio_hang">Thêm Vào Giỏ Hàng</string>


    <string name="facebook_app_id">592798374205329</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>

    <string name="tab_homepage_title">Home Page</string>
    <string name="tab_noconnection">No Internet</string>
    <string name="tab_title_1">Áo Ba Lỗ</string>
    <string name="tab_title_2">Áo Khoác</string>
    <string name="tab_title_3">Áo Sơ Mi</string>
    <string name="tab_title_4">Áo Thun</string>
    <string name="tab_title_5">Áo Vest</string>
    <string name="tab_title_6">Giày Dép</string>
    <string name="tab_title_7">Phụ Kiện</string>
    <string name="tab_title_8">Quần Jean</string>
    <string name="tab_title_9">Quần Kaki</string>
    <string name="tab_title_10">Quần Lửng</string>
    <string name="tab_title_11">Quần Tay</string>
    <string name="tab_title_12">Quần Thun</string>

    <string name="no_internet_access">Please Check Your Connection !</string>
    <string name="about_us">About</string>

    <string name="txt_thoat">X</string>
    <string name="txt_send_to_facebook">Đăng</string>
    <string name="txt_canle_send_to_facebook">Hủy Bỏ</string>
    <string name="txt_post_sucessful">Bạn đã đăng thành công !</string>
    <string name="txt_binh_luan">Bình luận điều gì đó về nội dung này ...</string>
    <string name="txt_default_user_name">Unknown :</string>
    <string name="search_hint"> Từ khóa tìm ... </string>
    <string name="error_search"> "Không Tìm Thấy Sản Phẩm Hoặc Có Thể\nXảy Ra Lỗi Trong Quá Trình Tìm Kiếm\nHãy Kiểm Tra Lại Đường Truyền Của Bạn"</string>
    <string name="error_load">Đã Xảy Ra Lỗi Trong Quá Trình Thực Thi\nVui Lòng Kiểm Tra Lại Mạng !</string>
    <string name="error_different_user">Đang đăng nhập bằng tài khoảng Facebook khác !</string>
    <string name="action_login">Admin Login</string>
    <string name="action_draw_2_distance">Vẽ đường đi giữa 2 điểm</string>
    <string name="travel_mode_driving">Driving</string>
    <string name="travel_mode_walking">Walking</string>
    <string name="travel_mode_bicycling">Bicycling</string>
    <string name="travel_mode_transit">Transit</string>
    <string name="transit_mode_bus">Bus ( Xe Buýt )</string>
    <string name="transit_mode_subway">Subway ( Tàu điện ngầm )</string>
    <string name="transit_mode_train">Train ( Tàu Hỏa )</string>
    <string name="transit_mode_tram">Tram ( Xe Điện )</string>
    <string name="transit_mode_rail">Rail ( Xe Lửa Chạy Đường Sắt )</string>
    <string name="error_two_distance">Vui lòng chọn điểm đi và điểm đến !</string>
    <string name="btn_show_off_map">Tắt Bản Đồ</string>
    <string name="btn_show_on_map">Bật Bản Đồ</string>

    <string name="btn_settings">Tùy Chỉnh</string>
    <string name="action_go_to_shop">Đi đến Shop</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_portal">Trang Chủ</string>
    <string name="action_shopping_cart">Giỏ Hàng</string>
    <string name="action_add_to_shopping_cart">Thêm Vào Giỏ Hàng</string>
    <string name="title_activity_favorite_products_and_shopping_cart">
        FavoriteProductsAndShoppingCart
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_show_favorite_products">Danh Sách Yêu Thích</string>
    <string name="notification_exist_product_in_favorite_table">Sản phẩm này đã được có trong danh mục yêu thích</string>
    <string name="notification_exist_product_in_shoppingcart_table">Sản phẩm này đã có trong giỏ hàng</string>
    <string name="notification_add_product_to_favorite_table_success">Đã thêm sản phẩm trên vào danh mục yêu thích</string>
    <string name="notification_add_product_to_shoppingcart_table_success">Đã đưa sản phẩm vào giỏ hàng</string>

    <string name="notification_error_to_add_product">Đã có sự cố xảy ra khi thực thi \\n Mời bạn vui lòng thử lại</string>
    <string name="add_product_to_favorite">Thêm vào mục yêu thích</string>
    <string name="txt_shopping_cart">Giỏ Hàng</string>
    <string name="txt_favorite">Sản Phẩm Yêu Thích</string>
    <string name="favorite_activity_title">Danh Sách Yêu Thích</string>
    <string name="shopping_cart_activity_title">Giỏ Hàng</string>
    <string name="txt_btn_order">Đặt Hàng</string>
    <string name="txtNoProductShow">Không có sản phẩm nào để hiện thị\nQuay lại để tiếp tục mua sắm</string>
    <string name="post_list">Gửi Đơn Hàng</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_loading">Loading ...</string>
    <string name="txt_share_success">Bạn đã chia sẽ nội dung thành công lên Facebook !</string>
    <string name="send_response_success">Đã gửi đơn hàng thành công !</string>
    <string name="send_response_error">Đã gửi đơn hàng thất bại !\nXin bạn vui lòng thử lại !</string>

    <string-array name="map_types">
        <item>MAP_TYPE_NORMAL</item>
        <item>MAP_TYPE_SATELLITE</item>
        <item>MAP_TYPE_TERRAIN</item>
        <item>MAP_TYPE_HYBRID</item>
        <item>MAP_TYPE_NONE</item>
    </string-array>

    <!--GCM-->
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_registering">Đang thử (lần %1$d/%2$d) để đăng ký thiết bị trên GCM Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>

</resources>
