<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/add_product_to_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/add_product_to_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_product_to_shoppingcart"
        android:icon="@drawable/ic_add_shopping_cart_white_24dp"
        android:title="@string/action_add_to_shopping_cart"
        app:showAsAction="ifRoom" />
</menu>