<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.kalis.shop.MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_shopping_cart"
        app:showAsAction="ifRoom"
        android:actionViewClass="android.widget.Button"
        android:title="@string/action_shopping_cart"
        android:icon="@drawable/shoping_cart_fake"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:actionViewClass="android.widget.Button"
        android:icon="@android:drawable/arrow_down_float"
        app:showAsAction="always"/>




</menu>